# rdmo-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
notebooks/: conditions.ipynb  domain.ipynb  options.ipynb  projects.ipynb  questions.ipynb  tasks.ipynb  users.ipynb  views.ipynb
rdmo_client/: __init__.py  accounts.py  client.py  conditions.py  domain.py  http.py  options.py  projects.py  questions.py  rest.py  tasks.py  views.py
rdmo_client/client/: http.py  rest.py
testing/: test.py
